我又更新了(〃'▽'〃)

--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@
 <link href="/css/main.css?v=6.3.0" rel="stylesheet" type="text/css" />
 
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon-next.png?v=6.3.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon-32x32-next.png?v=6.3.0">
 
 
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32-next.png?v=6.3.0">
@@ -81,7 +81,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16-next.png?v=6.3.0">
 
 
-  <link rel="mask-icon" href="/images/logo.svg?v=6.3.0" color="#222">
+  <link rel="mask-icon" href="/images/favicon-32x32-next.png?v=6.3.0" color="#222">
 
 
 
@@ -142,8 +142,6 @@
 <meta name="twitter:title" content="about">
 <meta name="twitter:description" content="你若晴天，我便安好。">
 
-
-  
 
 
   <link rel="alternate" href="/atom.xml" title="酱油哥博客" type="application/atom+xml" />
