--- a/about/index.html
+++ b/about/index.html
@@ -143,8 +143,6 @@
 <meta name="twitter:description" content="你若晴天，我便安好。">
 
 
-  
-
 
   <link rel="alternate" href="/atom.xml" title="酱油哥博客" type="application/atom+xml" />
 
@@ -1254,7 +1252,7 @@ setInterval("createtime()",250);
 
   
   <script src="https://cdn1.lncld.net/static/js/av-core-mini-0.6.4.js"></script>
-  <script>AV.initialize("XqGtzNdadMs8VqYrnsloQVKY-gzGzoHsz", "QeOuiiH3ghloz7FxfyNK6JWT");</script>
+  <script>AV.initialize("", "");</script>
   <script>
     function showTime(Counter) {
       var query = new AV.Query(Counter);
