我又更新了(〃'▽'〃)

--- a/love/index.html
+++ b/love/index.html
@@ -19,9 +19,10 @@
 </head>
 
 <body>
-<!-- <embed src="http://p3qhnc0eg.bkt.clouddn.com/U%20are%20so%20beautiful.mp3" width="0" height="0" loop="-1" autostart="true"> </embed> -->
-<embed src="http://other.web.ri01.sycdn.kuwo.cn/resource/n3/19/68/2405391895.mp3" width="0" height="0" loop="-1" autostart="true"> </embed>
 
+<!-- <embed src="http://p3qhnc0eg.bkt.clouddn.com/U%20are%20so%20beautiful.mp3" width="0" height="0" loop="-1" autostart="true"> </embed> -->
+<!-- <embed src="http://other.web.ri01.sycdn.kuwo.cn/resource/n3/19/68/2405391895.mp3" width="0" height="0" loop="-1" autostart="true"> </embed> -->
+<embed src="http://www.ytmp3.cn/down/35839.mp3" width="0" height="0" loop="-1" autostart="true"> </embed>
 
 <div id="mainDiv">
 	<div id="content">
