--- a/about/index.html
+++ b/about/index.html
@@ -134,7 +134,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="about">
 <meta property="og:url" content="http://enfangzhong.github.io/about/index.html">
-<meta property="og:site_name" content="酱油哥博客">
+<meta property="og:site_name" content="AnFrank">
 <meta property="og:description" content="关于博主 骚老师好，大家好，我是波澜哥，今天给大家唱一首*的离不开你。    哦对不起 ，我走出片场了。 本人就是爱打酱油并且集才华与美貌于一身的酱油哥。(音：可带劲了，我的烤面筋，融化了你的心！)    本博客的初衷就是记录前端、JavaWeb、机器学习、深度学习、车联网等相关笔记，欢迎大家一起来交流学习。    求学期间也在努力发表Paper的科研狗。无奈于能力有限，常常在科研遇到挫折。">
 <meta property="og:locale" content="zh-CN">
 <meta property="og:image" content="https://upload-images.jianshu.io/upload_images/13821160-b830106fdceefecd.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">
@@ -153,10 +153,8 @@
 <meta name="twitter:image" content="https://upload-images.jianshu.io/upload_images/13821160-b830106fdceefecd.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">
 
 
-  
 
-
-  <link rel="alternate" href="/atom.xml" title="酱油哥博客" type="application/atom+xml" />
+  <link rel="alternate" href="/atom.xml" title="AnFrank" type="application/atom+xml" />
 
 
 
@@ -171,7 +169,7 @@
   };
 </script>
 
-  <title>about | 酱油哥博客</title>
+  <title>about | AnFrank</title>
   
 
 
@@ -263,7 +261,7 @@ function setSidebarMarginTop (headerOffset) {
     <div class="custom-logo-site-title">
       <a href="/" class="brand" rel="start">
         <span class="logo-line-before"><i></i></span>
-        <span class="site-title">酱油哥博客</span>
+        <span class="site-title">AnFrank</span>
         <span class="logo-line-after"><i></i></span>
       </a>
     </div>
@@ -606,9 +604,9 @@ function setSidebarMarginTop (headerOffset) {
             
               <img class="site-author-image" itemprop="image"
                 src="/images/avatar.jpg"
-                alt="酱油哥" />
+                alt="AnFrank" />
             
-              <p class="site-author-name" itemprop="name">酱油哥</p>
+              <p class="site-author-name" itemprop="name">AnFrank</p>
               <p class="site-description motion-element" itemprop="description">你若晴天，我便安好。</p>
           </div>
 
@@ -856,7 +854,7 @@ function setSidebarMarginTop (headerOffset) {
   <span class="with-love" id="animate">
     <i class="fa fa-heartbeat"></i>
   </span>
-  <span class="author" itemprop="copyrightHolder">酱油哥</span>
+  <span class="author" itemprop="copyrightHolder">AnFrank</span>
 
   
 
