我又更新啦(〃'▽'〃)，添加音乐播放器

--- a/links/index.html
+++ b/links/index.html
@@ -659,10 +659,36 @@ function setSidebarMarginTop (headerOffset) {
                         <img class="ava" src="https://s2.ax1x.com/2019/12/23/l9FdHA.md.jpg">
                         <div class="card-header">
                            <div>
-                              <a href="ttps://sqdxwz.com" target="_blank"> 王荣胜</a>
-                              <a href="ttps://sqdxwz.com" target="_blank"><span class="focus-links">关注</span></a>
+                              <a href="https://sqdxwz.com" target="_blank"> 王荣胜</a>
+                              <a href="https://sqdxwz.com" target="_blank"><span class="focus-links">关注</span></a>
                            </div>
                            <div class="info">可以允许不完美，但不能不做！</div>
+                        </div>
+                    </div>
+
+                
+
+                    <div class="card">
+                        <img class="ava" src="https://cdn.jsdelivr.net/gh/uncleacc/cdn/img/custom/avatar.jpg">
+                        <div class="card-header">
+                           <div>
+                              <a href="https://www.fezhu.top" target="_blank"> Uncleacc</a>
+                              <a href="https://www.fezhu.top" target="_blank"><span class="focus-links">关注</span></a>
+                           </div>
+                           <div class="info">一只努力学习的蒟蒻仔</div>
+                        </div>
+                    </div>
+
+                
+
+                    <div class="card">
+                        <img class="ava" src="https://i.loli.net/2020/04/19/8cVPymQhbTUnopO.gif">
+                        <div class="card-header">
+                           <div>
+                              <a href="https://bet-yc.gitee.io" target="_blank"> Bet</a>
+                              <a href="https://bet-yc.gitee.io" target="_blank"><span class="focus-links">关注</span></a>
+                           </div>
+                           <div class="info">就当是一场梦，醒了很久还是很感动</div>
                         </div>
                     </div>
 
