我又更新啦(〃'▽'〃)，添加音乐播放器

--- a/links/index.html
+++ b/links/index.html
@@ -694,6 +694,19 @@ function setSidebarMarginTop (headerOffset) {
 
                 
 
+                    <div class="card">
+                        <img class="ava" src="https://hexo.yuanjh.cn/images_out/avatar.png">
+                        <div class="card-header">
+                           <div>
+                              <a href="https://hexo.yuanjh.cn" target="_blank"> 闻鸡起舞</a>
+                              <a href="https://hexo.yuanjh.cn" target="_blank"><span class="focus-links">关注</span></a>
+                           </div>
+                           <div class="info">逝者如斯夫，不舍昼夜(IT,Java,Python,Web,量化,机器学习)</div>
+                        </div>
+                    </div>
+
+                
+
             </div>
             <div class="note info"><p>排名不分先后，欢迎访问(～￣▽￣)～ </p></div>
 <center>   友链位闲置中，欢迎入驻哦😄~   </center>
